tests/files/parser_tests/should_fail/063.cmdr
//Should not parse for loop due to incomplete loop
for (i = 0;) {
    echo hi;
}